# asr-media-cli

./: .gitignore  README.md  README.zh.md  app.py  asr_manager.py  audio_processor.py  cli.py  config.json  convert.py  covert.py  easy_start.bat  example_usage.py  file_watcher.py  index.html  log.txt  main.py  main2.py  new.bat  pyproject.toml  recheck_recognition.py  repo_restore.go  requirements.txt  setup.py  start_audio_processor.bat  text_formatter.py  utils.py  video_processor.py
asr/: __init__.py  asr_selector.py  base_asr.py  bcut_asr.py  google_asr.py  jianying_asr.py  kuaishou_asr.py  utils.py
audio-processor/: go.mod  go.sum
audio-processor/BillNote_frontend/: package-lock.json
audio-processor/audio-processor/: go.mod  go.sum
audio-processor/audio_web/: # 创建 systemd 服务.sh  deploy.ps1  main.go
audio-processor/configs/: repo_backup.go  test.go
audio_tools/: __init__.py
audio_tools/controllers/: __init__.py  processor_controller.py
audio_tools/core/: __init__.py  audio_extractor.py  config_manager.py  error_handler.py  file_utils.py
audio_tools/processing/: __init__.py  file_processor.py  folder_monitor.py  part_manager.py  srt_exporter.py  (+4 more)
core/: __init__.py  asr.py  asr_manager.py  audio_processor.py  audio_splitter.py  check_and_freeze_deps.py  cli.py  convert.py  dependency_container.py  interfaces.py  progress_manager.py  text_formatter.py  transcription_manager.py  utils.py  video_converter.py
templates/: a.html  index.html  test.html
tests/: test_transcription_processor.py  test_utils.py
tools/: feature_tester.py  pdb_tutorial.py
(+74 files in other folders)
